# houseplants-server

./: TODO.md  pyproject.toml
houseplants/: schema.py
houseplants/houseplants_api/: admin.py  models.py  resolvers.py  test_factories.py  tests.py
houseplants/houseplants_api/migrations/: 0006_cleaninglog.py
