[tool.poetry]
name = "houseplants-server"
version = "0.1.0"
description = ""
authors = ["Dianing Yudono"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
graphene = "^2.1.9"
graphene-django = "^2.15.0"
django-cors-headers = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
